fix bug #41861 (getNamespaces() returns namespaces of node's siblings) add test